# argparse_pydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  nbdocs.ini  noxfile.py  noxfile_conda.py  noxfile_conda_example.py  noxfile_conda_lint.py  noxfile_cov.py  noxfile_lint.py  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  requirements_test_extra.txt  setup.cfg  setup.py
Nbs/: 01_examples.ipynb  README.ipynb
docs/: 01_examples.md  README.md
examples/: example_01_simple.py  example_01_simple__app1.py  example_01_simple__app2.py  example_01_simple__app3.py  example_01_simple__app4.py  example_01_simple__argparse.py  example_01_simple__parse_cfg.py  example_01_simple__run.py  example_02_app.py  example_02_app__alter.py  example_02_app__cmd_name.py  example_02_app__cmd_name2.py  example_02_app__run.py  example_02_app__run2.py  example_02_simple.py  example_03_help.py  example_03_help__app1.py  example_03_help__app2.py  example_03_help__argparse.py  example_03_help__run.py  example_05_pydocs.py  example_05_pydocs_1.py  example_05_pydocs__app1.py  example_05_pydocs__app2.py  example_05_pydocs__argparse.py  example_06_app.py  example_07_tutorial_1.py  example_08_tutorial_2.py  example_09_tutorial_3.py  example_10_tutorial_4.py  example_11_tutorial_5.py
search/: search_index.json
tests/: test_add_argument_action.py  test_add_argument_base.py  test_add_argument_flag.py  test_add_argument_json_schema_extra.py  test_add_argument_simple.py  test_add_models.py  test_core_base.py  test_create_parser.py  (+3 more)
(+48 files in other folders)
