[metadata]
name = argparse_pydantic
version = attr: argparse_pydantic.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = argparse config with pydantic model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/argparse_pydantic
license = apache2
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests*
    Nbs*
    docs*

[coverage:paths]
source =
    src/argparse_pydantic/
